third_party/move/move-compiler-v2/tests/more-v1/translated_ir_tests/move/commands/if_moves_no_else.exp

Diagnostics:
error: cannot move local `x` since it is still in use
  ┌─ tests/more-v1/translated_ir_tests/move/commands/if_moves_no_else.move:5:17
  │
5 │         let y = move x;
  │                 ^^^^^^ attempted to move here
  ·
8 │     assert!(x == 0, 42);
  │             ------ used here
